syntax = "proto3";

package spinresp;

option go_package = "github.com/CodyPerakslis/armadanet/spinner/spinresp";

service Spinner {
    rpc Attach (JoinRequest) returns (stream TaskRequest);
    // rpc Run (stream TaskRequest) returns (stream TaskResult); 
}

message UUID {
    string value = 1;
}

message JoinRequest {
    UUID captain_id = 1;
}

message TaskRequest {
    UUID task_id = 1;
}